--- a/style.css
+++ b/style.css
@@ -1,24 +1,28 @@
 
 body {
   margin: 0 auto;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
+  color: #343434;
 }
 
 h1 {
   text-align: center;
+  margin: auto;
 }
 
 .container {
   width: 30vw;
   padding: 20px;
-  margin: 20px;
+  margin: auto;
   background-color: #C0D0B7;
+  border-radius: 5px;
 }
 
 .input {
+  margin-top: 20px;
+  margin-bottom: 20px;
   display: flex;
   justify-content: center;
-  margin: 10px;
 }
 
 .item {
@@ -45,5 +49,30 @@ h1 {
 }
 
 #userinput {
+  width: -webkit-fill-available;
+  padding: 10px 5px 10px 5px;
+  border-radius: 5px;
+  border: 1px solid #343434;
+  background-color: #c0d0b7;
+  font-family: "Lato", sans-serif;
+  font-size: 1em;
+}
 
+#userinput:focus, #userinput:active {
+  background-color: #E2E9DE;
+  border: 1px solid #343434;
+  outline: none!important;
+}
+
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: #343434;
+  opacity: 1; /* Firefox */
+}
+
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+  color: #343434;
+}
+
+::-ms-input-placeholder { /* Microsoft Edge */
+  color: #343434;
 }
