--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ h1 {
 
 #userinput {
   width: -webkit-fill-available;
+  width: -moz-available;
   padding: 10px 5px 10px 5px;
   border-radius: 5px;
   border: 1px solid #343434;
